Expose block lifecycle through public TestKit